--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<h1>WOAH! 0o0</h1>
-		<h5><small>Based? Based on what?</small><a href="http://manuelpinto.in" target="_blank"> </a></h5>
+		<h5><small>Couldn't resist, huh? ^w^</small><a href="http://manuelpinto.in" target="_blank"> </a></h5>
 	</div>
 	
 	<script src="app.js"></script>
