2dn page and a SECRET xD

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id ="body1">
 	<div class="container">
 		<h1>WOAH! 0o0</h1>
-		<h5><small>Couldn't resist, huh? ^w^</small><a href="http://manuelpinto.in" target="_blank"> </a></h5>
+		<a href="secret.html" target="_blank"><h5><small>Couldn't resist, huh? ^w^</small></h5></a>
 	</div>
 	
 	<script src="app.js"></script>
